...
  static final List<Map<String, dynamic>> curriculumData = [
    {
      'level': 'Genel',
      'topics': ['Genel Almanca Sohbet'],
    },
    {
      'level': 'A1.1',
      'topics': [
        'Artikel (der, die, das)',
        'Gramer (Temel)',
        'Tanışma ve Selamlaşma',
        'Sayılar ve Tarihler',
        'Günlük Rutinler',
...
